Persist adaptive running plan history